tests/rosetta/transpiler/rb/casting-out-nines.error
run: exit status 1
/workspace/mochi/tests/rosetta/transpiler/rb/casting-out-nines.rb: --> /workspace/mochi/tests/rosetta/transpiler/rb/casting-out-nines.rb
syntax error, unexpected `begin'
   46  start = _now()
>  80    def subset(base, begin, end)
>  96    end
  132  end_time = _now()
/workspace/mochi/tests/rosetta/transpiler/rb/casting-out-nines.rb:80: syntax error, unexpected `begin' (SyntaxError)
  def subset(base, begin, end)
                   ^~~~~

